Import of VOJ/XML-Struct-0.04 from CPAN.
gitpan-cpan-distribution: XML-Struct
gitpan-cpan-version:      0.04
gitpan-cpan-path:         VOJ/XML-Struct-0.04.tar.gz
gitpan-cpan-author:       VOJ
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 
 
 This archive contains the distribution XML-Struct,
-version 0.03:
+version 0.04:
 
-  Convert document-oriented XML to data structures, preserving element order
+  Represent XML as data structure preserving element order
 
 This software is copyright (c) 2013 by Jakob Voß.
 
